# atr_mina

./: CMakeLists.txt  Dockerfile  README.md  atr_mina  debug_mqtt.py  docker-compose.yml  gerar_assets.py  painel_controle.py  run_all.py
docs/: INSTRUCTIONS.md
include/: Autuadores.h  BufferCircular.h  MqttClient.h  Route.h  SensorData.h  Sensores.h  Threads.h
interface/: gestao_mina.py  gestao_pygame.py  interface_local.py  painel_controle.py  requirements.txt  simulacao_mina.py
routes/: example.route
scripts/: package_submission.sh  remove_duplicate_headers.py  repair_logs.py
src/: Autuadores.cpp  BufferCircular.cpp  MqttClient.cpp  Route.cpp  SensorData.cpp  Sensores.cpp  Threads.cpp  Threads.cpp.bak  main.cpp
tests/: test_route.cpp
tools/: check_logs.py  ipc_addtruck.py
